# F4ArmGcc

./: .gitignore  CMakeLists.txt  CMakePresets.json  arm-none-eabi.cmake  generate_build  main.cpp  system_stm32g0xx.cpp
notes/: gdbgui.txt  openocd.txt
